public interface Appareil {
    void allumer();
    void eteindre();
    String toString();
}
